Fix misaligned avatars in activity columns

--- a/Resources/Scripts/styles/browser.css
+++ b/Resources/Scripts/styles/browser.css
@@ -118,19 +118,19 @@ html[data-td-theme='dark'] .stream-item:not(:hover) .js-user-actions-menu {
   opacity: 0.25;
 }
 
-.stream-item[data-key^="favorite"] .item-img, .stream-item[data-key^="retweet"] .item-img {
+.stream-item[data-key^="favorite"] .has-source-avatar .item-img, .stream-item[data-key^="retweet"] .has-source-avatar .item-img {
   position: absolute;
   left: 21px;
   top: 48px;
   width: 0 !important;
 }
 
-.stream-item[data-key^="favorite"] .activity-header > .nbfc, .stream-item[data-key^="retweet"] .activity-header > .nbfc {
+.stream-item[data-key^="favorite"] .has-source-avatar > .nbfc, .stream-item[data-key^="retweet"] .has-source-avatar > .nbfc {
   margin-left: 46px;
   line-height: unset !important;
 }
 
-.stream-item[data-key^="favorite"] .activity-header > .nbfc > .avatar, .stream-item[data-key^="retweet"] .activity-header > .nbfc > .avatar {
+.stream-item[data-key^="favorite"] .has-source-avatar > .nbfc > .avatar, .stream-item[data-key^="retweet"] .has-source-avatar > .nbfc > .avatar {
   position: absolute;
   margin-left: -34px;
 }
